think it no longer does that.  In addition I took care of a error
placement bug when the error was in a line containing a macro
expansion, and changed the error handling from using char * to using
Strings, like the rest of grap.

Got rid of an error on SunOS (and presumably other architectures) 
where -0 labels were printed on auto-generated labels.

1.01: Fixed a compilation bug under RedHat 6.1.  Cleaned up autoconf
and tweaked the makefile.

1.0: Incorporated Bruce Lilley's error reporting code.  Cleaned up the
documents (including a menton for Bruce in the man page) for v1.0
release.  Cleared up a file reading bug.

0.98b: Bruce Lilly reported some bugs and DWP incompatibilities,
mainly with negative numbers in number lists and comma separations in
them.  He also compiles in UWIN under NT, which broke autoconf in some
weird ways.  The most important of these necessitated adding a check
to ensure that install supports -d.

His test case is in the example file now.  He also found some spelling
errors.

The README file now reflects the real state of the world, too.  More
kudos to Bruce.

While tinkering with those autoconf changes I found that grap didn't
compile under g++ 2.7.2.1 any more.  Good thing that 0.97b wasn't
really released.  All is well again.

More fun from Bruce: he's given me patches to make cascding
assignments work and to remove a bug with comments not acting as
separators.

I've also make the order of copy commands more flexible (the until can
go before or after an inline macro, for example) and fixed a bug in
the grammar that made it difficult to put general expressions in
places like the frame size.  Expressions can go anywhere now, at the
expense that string comparisons can only appear in if statements.
Those bugs were also spotted by Bruce.

0.97b: Finally have a copy of egcs, so grap will now compile under it
using both the stl and the standard string class.  What do you know,